# pokemon-tcg-api-client

./: Cargo.toml  LICENSE
examples/: custom_resource.rs  get_pokemon_cards.rs
src/: lib.rs  main.rs
src/builder/: energy.rs  mod.rs  pokemon.rs  set.rs  trainer.rs
src/pokemon_api_client/: api_client.rs  error.rs  mod.rs
src/resource/: card.rs  common.rs  mod.rs  set.rs
