[package]
name = "pokemon-tcg-api-client"
version = "0.2.1"
edition = "2021"
description = "A crate for querying a pokemon tcg api."
repository = "https://github.com/RasAllhague/pokemon-tcg-api-client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
urlencoding = "2.1.2"